<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="Nama" />

        <EditText
            android:id="@+id/etNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Jenis Kelamin" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbPria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pria" />

            <RadioButton
                android:id="@+id/rbWanita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Wanita" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Negara Asal" />

            />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/negaraAsal"
            android:minHeight="48dp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Kemampuan Bahasa" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <CheckBox
                    android:id="@+id/cbKiri1"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/Indonesia"/>

                <CheckBox
                    android:id="@+id/cbKanan1"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/Inggris"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <CheckBox
                    android:id="@+id/cbKiri2"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/Malaysia"/>

                <CheckBox
                    android:id="@+id/cbKanan2"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/Amerika"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <CheckBox
                    android:id="@+id/cbKiri3"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/Singapura"/>

                <CheckBox
                    android:id="@+id/cbKanan3"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/Arab"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <CheckBox
                    android:id="@+id/cbKiri4"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/Filiphina"/>

                <CheckBox
                    android:id="@+id/cbKanan4"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/Korea"/>

            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btnTampilkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tampilkan" />

        <Button
            android:id="@+id/btnKosongkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Kosongkan"
            android:onClick="bersihkan"/>
    </LinearLayout>

</ScrollView>